--- a/contact.html
+++ b/contact.html
@@ -9,28 +9,29 @@
 <body>
 <div class="container">
     <div id="header">
-        <h1>Slammers Beach VolleyBall</h1>
+    <h1>Slammers Beach VolleyBall</h1>
     </div>
 
     <div class="nav">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="new_players.html">New Players</a></li>
-            <li><a href="results.html">Results</a></li>
-            <li><a href="registration.html">Registration</a></li>
-            <li><a href="links.html">Links</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-        </ul>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="new_players.html">New Players</a></li>
+        <li><a href="results.html">Results</a></li>
+        <li><a href="registration.html">Registration</a></li>
+        <li><a href="links.html">Links</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+    </ul>
     </div>
-    <div class="float">
 
+    <div class="float">
         <img src="beachNet400.png" alt="beach with volleyball net">
         <br>
     </div>
+
 <body>
     <h2>Contact us</h2>
 
-    <div id="contactlist">
+    <div class="contact">
         <ul>
             <li>Phone: 47712233</li>
             <li>Fax: 4771 2244</li>
@@ -38,7 +39,7 @@
             <li>Email: <a href="emailto:slammers@gmail.com?Subject=Email%20enquiry">slammers@gmail.com</a></li>
         </ul>
     </div>
-</p>
+    </p>
 
 </div>
 
