--- a/registration.html
+++ b/registration.html
@@ -26,39 +26,45 @@
     <h2> Player registration</h2>
     <P>Please fill out the below form and we will contact you with team details based on your preferred playing day and time.</P>
 
-    <form action="registration_form.php">
-First Name: <br>
+    <form action="registration_form.php" method ="post">
+        <fieldset>
+            <legend> Personal details</legend>
+        First Name: <br>
         <input type="text" name="firstname"><br>
-Surname:<br>
+        Surname:<br>
         <input type="text" name="lastname"><br>
-Contact phone number:<br>
+        Contact phone number:<br>
         <input type="text" name="phone"><br>
-Contact email address:<br>
+        Contact email address:<br>
         <input type="email" name="email"><br>
-Competition day: <br>
+        Competition day: <br>
         <input type="radio" name="compday" value="monday">Monday
         <input type="radio" name="compday" value="tuesday">Tuesday
         <input type="radio" name="compday" value="wednesday">Wednesday
         <input type="radio" name="compday" value="thursday">Thursday
         <input type="radio" name="compday" value="friday">Friday
         <input type="radio" name="compday" value="saturday">Saturday<br>
-Competition time:<br>
+        Competition time:<br>
         <input type="radio" name="comptime" value="afternoon">Afternoon
         <input type="radio" name="comptime" value="evening">Evening<br>
         <P>
-        <strong>Playing guidelines:</strong><br>
-        <cite>Participants in Slammers Beach Volleyball play at their own risk. Anyone playing is responsible for their own safety and should only play if they are capable. Check with your doctor before you begin.
+        Playing guidelines:<br>
+        <div class="fineprint">Participants in Slammers Beach Volleyball play at their own risk. Anyone playing is responsible for their own safety and should only play if they are capable. Check with your doctor before you begin.
         Game fees must be paid prior to the start of the game. Games may be cancelled by players up to 4 hours before hand to get a refund. Without 4 hours' notice, participants will forfeit the game and be charged 50% of the game fee.
-        </cite>
-        <br>
-     I have read and agree to the above playing guidelines.  <input type="checkbox" name="guidelines" required="required"><br>
+        <br><br>
+    </div>
+        I have read and agree to the above playing guidelines.  <input type="checkbox" name="guidelines" required="required"><br>
         </P>
-
         <input type="submit" value="submit">
-
-
-
+        </fieldset>
     </form>
-
 </body>
 </html>
+
+
+
+
+
+
+
+
