--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en-AU">
 <head>
     <meta charset="UTF-8">
-    <title>Slammers Beach Volleyball</title>
+    <title>Slammers Beach Volleyball - Contact</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -31,17 +31,16 @@
 <body>
     <h2>Contact us</h2>
 
-    <div class="contact">
-        <ul>
-            <li>Phone: 47712233</li>
-            <li>Fax: 4771 2244</li>
-            <li>Address: 123 Pokemund Street, Cairsville</li>
-            <li>Email: <a href="emailto:slammers@gmail.com?Subject=Email%20enquiry">slammers@gmail.com</a></li>
-        </ul>
-    </div>
+    Phone: 47712233<br>
+    Fax: 4771 2244<br>
+    Address: 123 Pokemund Street, Cairsville<br>
+    Email: <a href="emailto:slammers@gmail.com?Subject=Email%20enquiry">slammers@gmail.com</a><br>
+
     </p>
 
 </div>
-
+<div ID="footerxdeep">
+    (c) 2017 - JC425420 S Dawes Web design, a part of CP1406 Assignment 1
+</div>
 </body>
 </html>
