--- a/index.html
+++ b/index.html
@@ -34,28 +34,38 @@
     </div>
     </div>
     <div class="float">
-        <img src="600px-Beach_Volleyball_Classic_2007_(1444259070).jpg" alt="volleyball girls">
+        <img src="600px-Beach_Volleyball_Classic_2007_(1444259070).jpg" alt="Beach volleyball Classic 2007">
         <br>
-        Photo credit: David Bunting from England - Beach Volleyball Classic 2007, CC BY 2.0,
+        <div class="fineprint">
+            Photo credit: David Bunting from England Beach Volleyball Classic 2007, CC BY 2.0,
+        </div>
     </div>
+
 
     <div class="body" >
     <div id="mainbody">
+
+
+        <img src="ball logo 250.gif" alt="Slammers logo">
         <h3> About our club</h3>
         <p>
-        Slammers Beach Volleyball is a local company that hosts volleyball competitions and family events.
-        <br>Volleyball is a not only a great competitive sport, it is fun for social functions and family activities.
-        <br>Our facilities are available to hire for functions and our licensed bar is open daily, with happy hour every day from 6-7pm.
+        Slammers Beach Volleyball is a local company that hosts volleyball competitions and family events. Volleyball is a not only a great competitive sport, it is fun for social functions and family activities.
+        Our facilities are available to hire for functions and our licensed bar is open daily, with happy hour every day from 6-7pm.
         </p>
 
         <p>
         <h3>Who Can Play?</h3>
+        <p>
         There are 800 million players worldwide who play volleyball at least once a week. Volleyball is a sport that is safe, fun and does not require extreme fitness. Since you don’t have to move around the court too much, it’s great for people who want a low-impact sport that will help them get fit without pushing them to their limit. For those who are a bit more competitive, the sport is fantastic because games can be really exciting and intense, but there’s always a net between you and your opponents.
         <br>Beach volleyball is suitable for people of all ages, and men and women alike.
         <br>Anyone considering starting a new sport or exercise program should see their doctor first.
         </p>
+
     </div>
     </div>
 </div>
 </body>
+<div ID="footer">
+(c) 2017 - JC425420 S Dawes Web design, a part of CP1406 Assignment 1
+</div>
 </html>
