--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html lang="en-AU">
 <head>
     <meta charset="UTF-8">
-    <title>Slammers Beach Volleyball</title>
+    <title>Slammers Beach Volleyball - Links</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -29,16 +29,15 @@
     </div>
     <h2>Links to related sites</h2>
 
-    <div class="links">
-
-     <ul>
-         <li><a href ="http://www.volleyball.org/"> http:/www.volleyball.org/</a> - Volleyball worldwide </li>
-         <li><a href ="http://www.fivb.org/EN/beachvolleyball/">http://www.fivb.org/EN/beachvolleyball/</a> - FIVB International Federation of Volleyball, Beach </li>
-         <li><a href="http://www.avp.com">http://www.avp.com</a> – Association of Volleyball Professionals </li>
-     </ul>
-
+   <a href ="http://www.volleyball.org/"> http://www.volleyball.org/</a> - Volleyball worldwide <br>
+   <a href ="http://www.fivb.org/EN/beachvolleyball/">http://www.fivb.org/EN/beachvolleyball/</a> - FIVB International Federation of Volleyball, Beach <br>
+   <a href="http://www.avp.com">http://www.avp.com</a> – Association of Volleyball Professionals <br>
 </div>
 
+<div ID="footerxdeep">
+
+        (c) 2017 - JC425420 S Dawes Web design, a part of CP1406 Assignment 1
+    </div>
 
 </body>
 </html>
