--- a/new_players.html
+++ b/new_players.html
@@ -2,7 +2,7 @@
 <html lang="en-AU">
 <head>
     <meta charset="UTF-8">
-    <title>Slammers Beach Volleyball</title>
+    <title>Slammers Beach Volleyball - New Players</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -28,7 +28,13 @@
         <img src="spike400px.jpg" alt="volleyball spike">
         <br>
     </div>
-
+<h2> New Players </h2>
+    <p>New players of all skill levels are always welcome to join.
+    </p>
+<p>
+    We have vacancies for all age and skill levels and we are currently looking to raise new teams in the 15-30 age brackets.<BR>
+    For more information, please register on our registration page, or contact us with the details on the contacts page.
+</p>
     <h2>About Volleyball</h2>
     <p>
     Volleyball is a team sport played by two teams on a playing court divided by a net.
@@ -38,15 +44,29 @@
 
     <p>
     The object of the game is for each team to send the ball regularly over the net to ground it on the opponent's court, and to prevent the ball from being grounded on its own court. The ball is put into play by the right back-row player who serves the ball by hitting it over the net to the opponent's court. A team is allowed to hit the ball three times (in addition to the block contact) to return it to the opponent's court. A player is not allowed to hit the ball twice consecutively, except when attempting a block. The rally continues until the ball touches the ground/floor, goes "out" or a team fails to return it to the opponent's court or commits a fault.
+<br>
+        <br>
+    </p>
 
+    <div class="floatleft">
+    <img src="spike2%20resize.jpg" alt="spike">
+        <div class="fineprint">
+            Beach volleyball: soft touch. <br>
+            Photo credit <a href = "https://www.flickr.com/photos/37873897@N06/5208457834"> Flikr user Flavio~
+            </a>
+        </div>
+    </div>
+    <p>The team winning a rally scores a point (Rally Point System). When the receiving team wins a rally, it gains a point and the right to serve, and its players rotate one position clockwise.
+    The best of three or best of five games will win matches. Each non-deciding game will be won by the team that first scores 25 points with a minimum two-point advantage (no scoring cap). If there is a deciding game, it will be won by the team that first scores 15 points with a minimum two-point advantage (no scoring cap).
     </p>
 
     <p>
-    The team winning a rally scores a point (Rally Point System). When the receiving team wins a rally, it gains a point and the right to serve, and its players rotate one position clockwise.
-    The best of three or best of five games will win matches. Each non-deciding game will be won by the team that first scores 25 points with a minimum two-point advantage (no scoring cap). If there is a deciding game, it will be won by the team that first scores 15 points with a minimum two-point advantage (no scoring cap).
-    Reproduced from http://www.volleyball.org/whatis.html
+        Rules reproduced from <a href = "http://www.volleyball.org/whatis.html">http://www.volleyball.org/whatis.html</a>
     </p>
-
+<br>
+    <div ID="footer">
+        (c) 2017 - JC425420 S Dawes Web design, a part of CP1406 Assignment 1
+    </div>
 
 </body>
 </html>
