--- a/results.html
+++ b/results.html
@@ -2,7 +2,7 @@
 <html lang="en-AU">
 <head>
     <meta charset="UTF-8">
-    <title>Slammers Beach Volleyball</title>
+    <title>Slammers Beach Volleyball - Results</title>
     <link href="style.css" rel="stylesheet">
 </head>
 
@@ -149,7 +149,9 @@
           </tr>
     </table>
 
-
+    <div ID="footer">
+        (c) 2017 - JC425420 S Dawes Web design, a part of CP1406 Assignment 1
+    </div>
 
 </body>
 </html>
