hopefuly last upload
Had to make some changes as logo wouldn't display once the index was loaded to the server.
Works with this version.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <div class="body" >
     <div id="mainbody">
 
+<img src="Ball_logo_250.gif">
 
-        <img src="ball logo 250.gif" alt="Slammers logo">
         <h3> About our club</h3>
         <p>
         Slammers Beach Volleyball is a local company that hosts volleyball competitions and family events. Volleyball is a not only a great competitive sport, it is fun for social functions and family activities.
@@ -60,10 +60,10 @@
         <br>Beach volleyball is suitable for people of all ages, and men and women alike.
         <br>Anyone considering starting a new sport or exercise program should see their doctor first.
         </p>
-
     </div>
     </div>
 </div>
+
 </body>
 <div ID="footer">
 (c) 2017 - JC425420 S Dawes Web design, a part of CP1406 Assignment 1
